UCSFD8-945 make sure search form is not covered by subnav

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -1745,7 +1745,7 @@ a.icon-transit:hover {
           overflow: visible;
           -webkit-animation: menu-slide 500ms cubic-bezier(0.77, 0, 0.175, 1) 50ms both;
           animation: menu-slide 500ms cubic-bezier(0.77, 0, 0.175, 1) 50ms both;
-          z-index: 1; }
+          z-index: 2; }
       [block="block-ucsf-main-menu-desktop"] .menu-item .menu-child--wrapper .menu-item-close {
         display: block;
         position: absolute;
